# diploma

./: .dockerignore  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
backend/: alembic.ini  main.py  pyproject.toml  requirements.txt  setup.cfg
backend/app/: __init__.py  backend_pre_start.py  celeryworker_pre_start.py  main.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 2024_05_13_09_18-ef0b846b2490_init_migration.py  2024_05_17_14_12-31576e3fa459_.py  2024_05_20_14_42-745a12258b30_.py  (+2 more)
backend/app/api/: api.py
backend/app/auth/: __init__.py  auth.py  auth_required.py  oidc.py
backend/app/core/: config.py  openapi.py  routes.py
backend/app/crud/: __init__.py  base.py  candidate.py  phase.py  user.py  vacancy.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/enums/: __init__.py  candidate.py  phase.py  user.py
backend/app/exceptions/: http.py  model.py
backend/app/models/: __init__.py  candidate.py  phase.py  user.py  vacancy.py
backend/app/schemas/: __init__.py  pagination.py  pulse.py  typing.py
backend/app/templates/: add_candidate.html  add_candidate_with_phase.html  add_final_phase.html  add_technical_phase.html  add_vacancy.html  candidate_detail.html  edit_phase.html  header.html  list_candidates.html  list_phases.html  list_vacancies.html  send_feedback.html  vacancy_detail.html
backend/docker/: Dockerfile
backend/docker/scripts/: prestart.sh  scheduler-start.sh  start-reload-broker.sh  start-reload.sh  worker-start.sh
docker/: Dockerfile
(+13 files in other folders)
