[project]
name = "HR Portal"
version = "0.1"
description = "Diplom HR PORTAL"

[tool.mypy]
python_version = "3.11"
exclude = 'tests|venv|env'
# ignore typing in third-party packages
ignore_missing_imports = true
plugins = "pydantic.mypy"

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'
exclude = '''(\.git|\.mypy_cache|venv|env)'''

[tool.isort]
profile = "black"
known_local_folder = ["app"]
lines_after_imports = 2
